# MPEMidiPlayer

./: README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: midi_output.h  mpe_engine.h  render_state.h  touch_input.h  vulkan_renderer.h
app/src/main/cpp/src/: main.cpp  midi_output.cpp  mpe_engine.cpp  touch_input.cpp  vulkan_renderer.cpp
